feat: Introduce DNN module with new models, trainers, and experiments, refactor DDP configuration, and add economy components.

--- a/requirements.txt
+++ b/requirements.txt
@@ -41,8 +41,7 @@ sympy==1.14.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.2
-tensorflow-macos==2.16.2
-tensorflow-metal==1.2.0
+# NOTE: For Apple Silicon, install tensorflow-macos and tensorflow-metal manually
 termcolor==3.2.0
 typing_extensions==4.15.0
 tzdata==2025.3
@@ -50,5 +49,5 @@ urllib3==2.6.2
 Werkzeug==3.1.4
 wheel==0.45.1
 wrapt==2.0.1
-matplotlib
-seaborn
+matplotlib==3.10.0
+seaborn==0.14.0
