feat: Centralize defaults, improve trainers, improve demo notebook, fix tests
- Add gradient clipping support via OptimizerConfig (clipnorm/clipvalue)
- Normalize observations to prevent gradient explosion
- Refactor trainers with explicit optimizer injection and target network Polyak averaging
- Add src/_defaults.py as single source of truth for hyperparameters
- Implement unit-free Euler residual for interpretable convergence

320/320 tests passing.

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,9 @@ protobuf==4.25.8
 termcolor==3.2.0
 wrapt==2.0.1
 
-# Numerical Computing
+# Numerical Computing & Data
 numpy==1.26.4
+pandas>=2.0.0  # Used by ExperimentConfig.summary() and notebooks
 
 # Visualization
 matplotlib==3.10.0
